fix: webui layout

--- a/webui/index.html
+++ b/webui/index.html
@@ -28,7 +28,7 @@
         }
         
         .header {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+            background: linear-gradient(135deg, #f66 0%, #cd0 100%);
             color: white;
             padding: 30px;
             text-align: center;
@@ -293,8 +293,8 @@
         <div class="tabs">
             <button class="tab active" onclick="showTab('costs')">💰 成本管理</button>
             <button class="tab" onclick="showTab('budgets')">📊 预算监控</button>
-            <button class="tab" onclick="showTab('metrics')">📈 资源监控</button>
             <button class="tab" onclick="showTab('inventory')">📋 资源清单</button>
+            <button class="tab" onclick="showTab('metrics')">📈 资源监控</button>
             <button class="tab" onclick="showTab('optimization')">🎯 优化建议</button>
         </div>
         
